fixed navigation alignment/ chat scroll direction change/ chat display when signed out

--- a/src/components/comment-container/comment-container.styles.scss
+++ b/src/components/comment-container/comment-container.styles.scss
@@ -18,7 +18,7 @@
 }
 
 .message {
-    padding: 8px 16px;
+    padding: 8px 10px;
     margin-bottom: 8px;
     background: rgb(248, 203, 246);
     border-radius: 15px;
