--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -1,6 +1,6 @@
 .navigation-container {
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     
     .green-dot {
         width: 40px;
